# stout

./: CMakeLists.txt  a.cpp  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
